--- a/webapp/view/Accueil.view.xml
+++ b/webapp/view/Accueil.view.xml
@@ -1,5 +1,5 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Accueil" xmlns:m="sap.m">
-	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress3">
+	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress4">
 		<m:content>
 			<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
 				visible="true" displayInline="false">
@@ -90,12 +90,10 @@
 					<m:Button text="Evaluer" type="Default" icon="sap-icon://travel-request" iconFirst="true" width="auto" enabled="true" visible="true"
 						iconDensityAware="false" press="_onButtonPress5"/>
 				</m:contentLeft>
-				<m:contentMiddle>
+				<m:contentMiddle/>
+				<m:contentRight>
 					<m:Button text="Clôturer" type="Default" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"
 						press="_onButtonPress6"/>
-				</m:contentMiddle>
-				<m:contentRight>
-					<m:Button text="Bilan" type="Default" iconFirst="true" width="auto" enabled="true" visible="true" iconDensityAware="false"/>
 				</m:contentRight>
 			</m:Bar>
 		</m:footer>
