--- a/webapp/view/CreationBien.view.xml
+++ b/webapp/view/CreationBien.view.xml
@@ -1,6 +1,6 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.CreationBien" xmlns:m="sap.m"
 	xmlns:core="sap.ui.core">
-	<m:Page showHeader="true" title="Inventaire" showFooter="false" showNavButton="false">
+	<m:Page showHeader="true" title="Inventaire" showFooter="false" showNavButton="true" navButtonPress="_onPageNavButtonPress">
 		<m:content>
 			<m:HBox alignItems="Center" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
 				visible="true" displayInline="false">
@@ -42,15 +42,15 @@
 							<m:ComboBox value="" placeholder="Type de bien" editable="true" enabled="true" visible="true" width="auto" valueState="None" maxWidth="100%"
 								items="{/BienSet}">
 								<m:items>
-									<core:Item text="{ID}" enabled="true" key="{ID}"/>
+									<core:Item text="{name}" enabled="true" key="{name}"/>
 								</m:items>
 							</m:ComboBox>
 							<m:Text text="" width="auto" maxLines="1" wrapping="false" textAlign="Begin" textDirection="Inherit"/>
 							<m:Label text="Choix du nom du bien :" design="Standard" width="100%" required="false" textAlign="Begin" textDirection="Inherit"/>
-							<m:ComboBox value="" placeholder="Nom du bien" editable="true" enabled="false" visible="true" width="auto" valueState="None" maxWidth="100%"
+							<m:ComboBox value="" placeholder="Nom du bien" editable="true" enabled="true" visible="true" width="auto" valueState="None" maxWidth="100%"
 								items="{/OrdinateurSet}">
 								<m:items>
-									<core:Item text="{ID}" enabled="true" key="{ID}"/>
+									<core:Item text="{name}" enabled="true" key="{name}"/>
 								</m:items>
 							</m:ComboBox>
 							<m:Button text="Créer" type="Accept" iconFirst="true" width="200px" enabled="true" visible="true" iconDensityAware="false"
