--- a/webapp/view/Accueil.view.xml
+++ b/webapp/view/Accueil.view.xml
@@ -1,6 +1,7 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Accueil" xmlns:m="sap.m">
 	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress4">
 		<m:content>
+		
 			<m:HBox alignItems="Stretch" direction="Row" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
 				visible="true" displayInline="false">
 				<m:items>
@@ -58,7 +59,7 @@
 			<m:List
 				id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1-2217dfa30e3813430edd96af2_S2-34b26c6ead123d140ee0994b6_S6"
 				mode="SingleSelectMaster" headerText="" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true" growingThreshold="20"
-				growingScrollToLoad="true" itemPress="_onListItemPress3" items="{/CelluleSet}">
+				growingScrollToLoad="true" itemPress="_onListItemPress3" items="{/Cellule}">
 				<m:infoToolbar>
 					<m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
 						<m:content>
@@ -75,7 +76,7 @@
 					</m:Toolbar>
 				</m:headerToolbar>
 				<m:items>
-					<m:ObjectListItem intro="" title="{name}" number="{path: 'immo', type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits: 2 }}"
+					<m:ObjectListItem intro="" title="{CELLULE_NAME}" number="{path: 'immo', type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits: 2 }}"
 						numberUnit="immo" numberState="{state}" type="Active" selected="true" showMarkers="false" press="_onObjectListItemPress1">
 						<m:attributes/>
 						<m:firstStatus/>
