--- a/webapp/view/Batiments.view.xml
+++ b/webapp/view/Batiments.view.xml
@@ -30,7 +30,7 @@
 			</m:HBox>
 			<m:List id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1-2217dfa30e3813430edd96af2_S2"
 				mode="SingleSelectMaster" headerText="Header" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true"
-				growingThreshold="20" growingScrollToLoad="true" itemPress="_onListItemPress2" items="{/BatimentSet}">
+				growingThreshold="20" growingScrollToLoad="true" itemPress="_onListItemPress2" items="{/Batiment}">
 				<m:infoToolbar>
 					<m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
 						<m:content>
@@ -47,7 +47,7 @@
 					</m:Toolbar>
 				</m:headerToolbar>
 				<m:items>
-					<m:ObjectListItem intro="" title="{name}" number="" numberUnit="" numberState="None" type="Active" selected="true" showMarkers="false">
+					<m:ObjectListItem intro="" title="{BATIMENT_NAME}" number="" numberUnit="" numberState="None" type="Active" selected="true" showMarkers="false">
 						<m:attributes/>
 						<m:firstStatus/>
 						<m:secondStatus/>
