--- a/webapp/view/Villes.view.xml
+++ b/webapp/view/Villes.view.xml
@@ -3,7 +3,7 @@
 		<m:content>
 			<m:List id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1" mode="SingleSelectMaster"
 				headerText="Header" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true" growingThreshold="20"
-				growingScrollToLoad="true" itemPress="_onListItemPress1" items="{/VilleSet}">
+				growingScrollToLoad="true" itemPress="_onListItemPress1" items="{/Ville}">
 				<m:infoToolbar>
 					<m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
 						<m:content>
@@ -19,7 +19,7 @@
 					</m:Toolbar>
 				</m:headerToolbar>
 				<m:items>
-					<m:ObjectListItem intro="" title="{name}" number="" numberUnit="" numberState="None" type="Active" selected="true" showMarkers="false">
+					<m:ObjectListItem intro="" title="{VILLE_NAME}" number="" numberUnit="" numberState="None" type="Active" selected="true" showMarkers="false">
 						<m:attributes/>
 						<m:firstStatus/>
 						<m:secondStatus/>
