--- a/webapp/view/Accueil.view.xml
+++ b/webapp/view/Accueil.view.xml
@@ -1,4 +1,5 @@
-<mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Accueil" xmlns:m="sap.m">
+<mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Accueil" 
+xmlns:core="sap.ui.core" xmlns:m="sap.m" xmlns:html="http://www.w3.org/1999/xhtml">
 	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="true" navButtonPress="_onPageNavButtonPress4">
 		<m:content>
 		
@@ -19,7 +20,7 @@
 								visible="true" displayInline="false">
 								<m:items>
 									<m:Link text="Agence Montreuil-sous-Bois" textAlign="Begin" width="auto" target="_blank" wrapping="false" enabled="true" visible="true"
-										emphasized="false" subtle="false"/>
+										emphasized="false" subtle="false" press="_onButtonPress7"/>
 								</m:items>
 								<m:layoutData/>
 							</m:HBox>
@@ -84,6 +85,10 @@
 					</m:ObjectListItem>
 				</m:items>
 			</m:List>
+			<html:div>
+				<core:Fragment fragmentName="com.sap.build.standard.buildPoleEmploiEpf.view.BusyDialog" type="XML">
+				</core:Fragment>
+			</html:div>
 		</m:content>
 		<m:footer>
 			<m:Bar design="Auto">
