--- a/webapp/view/Regions.view.xml
+++ b/webapp/view/Regions.view.xml
@@ -9,12 +9,11 @@
 					<m:VBox alignItems="Stretch" direction="Column" fitContainer="false" width="auto" height="auto" justifyContent="Center" renderType="Div"
 						visible="true" displayInline="false">
 						<m:items>
-							<m:Title text="Localisation" titleStyle="Auto" width="auto" textAlign="Begin" visible="true"/>
+							<m:Button state="false" text="Localiser " icon="sap-icon://functional-location" type="Default" enabled="true" visible="true" press="_onSwitchChange"/>
 						</m:items>
 						<m:layoutData/>
 					</m:VBox>
-					<m:ToolbarSpacer width="50px"/>
-					<m:Switch state="false" customTextOff="Off" customTextOn="On" type="Default" enabled="true" visible="true" change="_onSwitchChange"/>
+					
 				</m:items>
 				<m:layoutData/>
 			</m:HBox>
