--- a/webapp/view/Regions.view.xml
+++ b/webapp/view/Regions.view.xml
@@ -1,4 +1,5 @@
-<mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Regions" xmlns:m="sap.m">
+<mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Regions" 
+xmlns:core="sap.ui.core" xmlns:m="sap.m" xmlns:html="http://www.w3.org/1999/xhtml">
 	<m:Page showHeader="true" title="Inventaire" showFooter="true" showNavButton="false">
 		<m:content>
 			<m:FeedListItem icon="/webapp/resources/1239734_1438134989737021_1475910407_n.jpg" sender="Bienvenue James SMITH" text="" info=""
@@ -42,6 +43,10 @@
 					</m:ObjectListItem>
 				</m:items>
 			</m:List>
+			<html:div>
+				<core:Fragment fragmentName="com.sap.build.standard.buildPoleEmploiEpf.view.BusyDialog" type="XML">
+				</core:Fragment>
+			</html:div>
 		</m:content>
 		<m:footer>
 			<m:Bar design="Auto">
