--- a/webapp/view/Accueil.view.xml
+++ b/webapp/view/Accueil.view.xml
@@ -58,9 +58,9 @@ xmlns:core="sap.ui.core" xmlns:m="sap.m" xmlns:html="http://www.w3.org/1999/xhtm
 				<m:layoutData/>
 			</m:HBox>
 			<m:List
-				id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1-2217dfa30e3813430edd96af2_S2-34b26c6ead123d140ee0994b6_S6"
+				id="cellList"
 				mode="SingleSelectMaster" headerText="" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true" growingThreshold="20"
-				growingScrollToLoad="true" itemPress="_onListItemPress3" items="{/Cellule}">
+				growingScrollToLoad="true" itemPress="_onListItemPress3" items="{cellsModel>/cells}">
 				<m:infoToolbar>
 					<m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
 						<m:content>
@@ -77,8 +77,8 @@ xmlns:core="sap.ui.core" xmlns:m="sap.m" xmlns:html="http://www.w3.org/1999/xhtm
 					</m:Toolbar>
 				</m:headerToolbar>
 				<m:items>
-					<m:ObjectListItem intro="" title="{CELLULE_NAME}" number="{path: 'immo', type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits: 2 }}"
-						numberUnit="immo" numberState="{state}" type="Active" selected="true" showMarkers="false" press="_onObjectListItemPress1">
+					<m:ObjectListItem intro="" cellId="{cellsModel>key}" title="{cellsModel>name}" number="{path: 'immo', type: 'sap.ui.model.type.Float', formatOptions: { maxFractionDigits: 2 }}"
+						numberUnit="immo" numberState="{state}" type="Active" selected="true" showMarkers="false">
 						<m:attributes/>
 						<m:firstStatus/>
 						<m:secondStatus/>
