--- a/webapp/view/Villes.view.xml
+++ b/webapp/view/Villes.view.xml
@@ -1,9 +1,9 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" controllerName="com.sap.build.standard.buildPoleEmploiEpf.controller.Villes" xmlns:m="sap.m">
 	<m:Page showHeader="true" title="Inventaire" showFooter="false" showNavButton="true" navButtonPress="_onPageNavButtonPress2">
 		<m:content>
-			<m:List id="sap_Responsive_Page_0-content-sap_m_List-1511558751838-3ff835262cd8d1b30edd966c1_S1" mode="SingleSelectMaster"
+			<m:List id="cityList" mode="SingleSelectMaster"
 				headerText="Header" footerText="" backgroundDesign="Solid" showSeparators="All" growing="true" growingThreshold="20"
-				growingScrollToLoad="true" itemPress="_onListItemPress1" items="{/Ville}">
+				growingScrollToLoad="true" itemPress="_onListItemPress1" items="{cityModel>/cities}">
 				<m:infoToolbar>
 					<m:Toolbar width="100%" height="auto" design="Auto" visible="false" enabled="true">
 						<m:content>
@@ -19,7 +19,8 @@
 					</m:Toolbar>
 				</m:headerToolbar>
 				<m:items>
-					<m:ObjectListItem intro="" title="{VILLE_NAME}" number="" numberUnit="" numberState="None" type="Active" selected="true" showMarkers="false">
+					<m:ObjectListItem intro="" cityId="{cityModel>/key}" title="{cityModel>name}" number=""
+						numberUnit="immo" numberState="None" type="Active" selected="true" showMarkers="false" press="_onObjectListItemPress1">
 						<m:attributes/>
 						<m:firstStatus/>
 						<m:secondStatus/>
